# Cloud-Travel-Guide

./: .gitignore  Dockerfile  README.md  WORKSPACE  docker-compose.dev.yml  docker-compose.prod.yml  package-lock.json  package.json
.github/workflows/: build-frontend.yml  build.yml
algorithms/: BUILD  pyproject.toml
backend/: .env  .env.example  .gitignore  .pre-commit-config.yaml  BUILD  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  init.sql  main.py  pyproject.toml
backend/db/: connection.py
backend/models/: user.py
backend/services/: auth.py
backend/tests/: test_health.py
backend/utils/: security.py
frontend/: .gitignore  .npmrc  BUILD  README.md  commitlint.config.mjs  craco.config.js  electron-builder.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vite.electron.config.ts  vitest.config.mts
frontend/.husky/: commit-msg  pre-commit
frontend/electron/: app-protocol.ts  esbuild.mjs  main.js  main.ts  menu.ts  paths.ts  preload.ts  tsconfig.json
frontend/electron/src/: main.ts  paths.ts
frontend/public/: electron.js  manifest.json
frontend/scripts/: electron-start.sh
frontend/src/: App.js  App.less  CpuUsage.tsx  DynamicLineChart.jsx  index.css
frontend/src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
frontend/src/components/: CpuFlameDiagram.tsx  CpuUsage.tsx  DynamicLineChart.tsx  GlobeExplorer.tsx  GlobeViewGizmo.tsx  RealTerrainExplorer.tsx  ThreeScene.tsx  Tiles3DExplorer.tsx
frontend/src/lib/: electron.ts
frontend/src/lib/globe/: Globe.ts  GlobeTile.ts  geo.ts  index.ts
frontend/src/lib/loaders/: AbstractModelLoader.ts  FbxModelLoader.ts  GaussianSplatLoader.ts  GltfModelLoader.ts  ModelLoaderRegistry.ts  ObjModelLoader.ts  index.ts  types.ts  utils.ts
frontend/src/lib/navigation/: AbstractNavigationController.ts  FirstPersonNavigationController.ts  OrbitNavigationController.ts  index.ts  types.ts
frontend/src/lib/terrain/: AbstractTerrainProvider.ts  HeightmapTerrainProvider.ts  TiledDemTerrainProvider.ts  Tiles3DTerrainProvider.ts  index.ts  noise.ts  types.ts
frontend/src/lib/viewer/: SceneViewer.ts  index.ts
public/: electron.js  index.html
